manifest/kyoo.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kyoo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyoo
  namespace: kyoo
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "kyoo.<path:stringreplacesecret#domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: kyoo-back
          port: 5000
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kyoo-front
          port: 8901
